--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,8 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.lme.iudapp.MainActivity">
     <item
-        android:id="@+id/action_update"
+        android:id="@+id/action_delete"
         android:orderInCategory="100"
-        android:title="@string/action_update"
+        android:title="@string/eliminar_usuario"
         app:showAsAction="always"/>
 </menu>
