--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="title" parent="@android:style/TextAppearance.Large">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/colorPrimaryText</item>
         <item name="android:paddingTop">@dimen/fab_margin</item>
@@ -29,7 +29,7 @@
     </style>
 
     <style name="subtitle" parent="@android:style/TextAppearance.Medium">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/colorSecondaryText</item>
         <item name="android:paddingBottom">@dimen/fab_margin</item>
