--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,7 +2,7 @@
           xmlns:app="http://schemas.android.com/apk/res-auto"
           xmlns:tools="http://schemas.android.com/tools"
           android:id="@+id/usersFragment"
-          android:name="com.lme.iudapp.fragmentos.UsersFragmento"
+          android:name="com.lme.iudapp.fragmentos.FragmentoUsuarios"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           app:layout_behavior="@string/appbar_scrolling_view_behavior"
