--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context="com.lme.iudapp.fragmentos.UsersFragment"
     tools:showIn="@layout/activity_main">
@@ -12,8 +13,16 @@
         android:id="@+id/filterSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/fab_margin"
+        android:spinnerMode="dialog"
         android:entries="@array/letras"
-        android:prompt="@string/elije_letra"/>
+        android:prompt="@string/elije_letra"
+        android:textColorHint="@color/colorPrimaryDark"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/divider"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/users_refresh_layout"
