--- a/app/src/main/res/layout/user_element.xml
+++ b/app/src/main/res/layout/user_element.xml
@@ -9,11 +9,13 @@
     <TextView
         android:id="@+id/user_name"
         android:layout_alignParentTop="true"
+        android:maxLines="1"
         style="@style/title" />
 
     <TextView
         android:id="@+id/user_birthdate"
         android:layout_below="@+id/user_name"
+        android:maxLines="1"
         style="@style/subtitle" />
 
     <View
