--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="letras">
-        <item>"All"</item>
+        <item>@string/default_spinner_tag</item>
         <item>A</item>
         <item>B</item>
         <item>D</item>
