--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
-        android:title="@string/eliminar_usuario"
+        android:title="@string/eliminar_usuario_titulo"
         app:showAsAction="always"/>
 </menu>
