-Añado C y T a las letras para filtrar

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -4,6 +4,7 @@
         <item>@string/default_spinner_tag</item>
         <item>A</item>
         <item>B</item>
+        <item>C</item>
         <item>D</item>
         <item>E</item>
         <item>F</item>
@@ -21,6 +22,7 @@
         <item>Q</item>
         <item>R</item>
         <item>S</item>
+        <item>T</item>
         <item>U</item>
         <item>V</item>
         <item>W</item>
