--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/fab_margin"
-    tools:context="com.lme.iudapp.MainActivity">
+    tools:context="com.lme.iudapp.view.activities.MainActivity">
 
     <EditText
         android:id="@+id/edt_user_name"
