--- a/app/src/main/res/layout/user_element.xml
+++ b/app/src/main/res/layout/user_element.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.lme.iudapp.MainActivity">
+    tools:context="com.lme.iudapp.view.activities.MainActivity">
 
     <TextView
         android:id="@+id/user_name"
