--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/fab_margin"
+    android:padding="@dimen/activity_horizontal_margin"
     tools:context="com.lme.iudapp.view.activities.MainActivity">
 
     <EditText
