--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,8 +1,5 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="@dimen/fab_margin"
-    android:layout_marginEnd="@dimen/fab_margin"
-    android:layout_marginLeft="@dimen/fab_margin"
-    android:layout_marginRight="@dimen/fab_margin"
+    android:layout_margin="@dimen/activity_horizontal_margin"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
