--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -11,12 +11,14 @@
     <EditText
         android:id="@+id/edt_user_name"
         android:inputType="text"
+        android:hint="@string/edt_nombre_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/edt_user_birthdate"
         android:inputType="date"
+        android:hint="@string/edt_fecha_usuario"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="false"/>
