--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -1,29 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/colorPrimaryLight"
     tools:context="com.lme.iudapp.view.fragments.UserDetailFragment">
 
-    <TextView
-        android:id="@+id/tvUserDetailName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/background_user_detail"
+        android:alpha="0.6"/>
 
-    <TextView
-        android:id="@+id/tvUserDetailBirthdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="@dimen/activity_horizontal_margin">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@android:drawable/alert_dark_frame"/>
+        <EditText
+            android:id="@+id/tvUserDetailName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
+            android:inputType="text" />
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/tvUserDetailBirthdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
+            android:inputType="date"
+            android:maxLines="2"/>
+
+    </LinearLayout>
+
+</FrameLayout>
