--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/background_user_detail"
-        android:alpha="0.6"/>
+        android:alpha="0.2"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,8 +26,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
-            android:inputType="text" />
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"
+            android:inputType="text"
+            android:padding="@dimen/activity_horizontal_margin"/>
 
         <EditText
             android:id="@+id/tvUserDetailBirthdate"
@@ -36,6 +37,7 @@
             android:background="@android:color/transparent"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
             android:inputType="date"
+            android:focusable="false"
             android:maxLines="2"/>
 
     </LinearLayout>
