--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -6,20 +6,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/activity_horizontal_margin"
+    android:gravity="center"
     tools:context="com.lme.iudapp.view.activities.MainActivity">
 
     <EditText
         android:id="@+id/edtUserName"
         android:inputType="text"
-        android:hint="@string/txt_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:hint="@string/txt_create_user_name"
+        android:ems="12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>
 
     <EditText
         android:id="@+id/edtUserBirthdate"
         android:inputType="date"
-        android:hint="@string/txt_userbirthdate"
-        android:layout_width="match_parent"
+        android:hint="@string/txt_create_user_birthdate"
+        android:ems="12"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:focusable="false"/>
 
