--- a/app/src/main/res/menu/menu_user_detail.xml
+++ b/app/src/main/res/menu/menu_user_detail.xml
@@ -6,21 +6,21 @@
     <item
         android:id="@+id/action_delete"
         android:orderInCategory="100"
-        android:title="borrar"
+        android:title="@string/txt_menu_delete_title"
         android:icon="@android:drawable/ic_menu_delete"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="101"
-        android:title="editar"
+        android:title="@string/txt_menu_edit_title"
         android:icon="@android:drawable/ic_menu_edit"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_close"
         android:orderInCategory="102"
-        android:title="cerrar"
+        android:title="@string/txt_menu_close_title"
         android:visible="false"
         android:icon="@android:drawable/ic_menu_close_clear_cancel"
         app:showAsAction="ifRoom"/>
@@ -28,7 +28,7 @@
     <item
         android:id="@+id/action_save"
         android:orderInCategory="103"
-        android:title="guardar"
+        android:title="@string/txt_menu_save_title"
         android:visible="false"
         android:icon="@android:drawable/ic_menu_save"
         app:showAsAction="ifRoom"/>
