--- a/app/src/main/res/menu/menu_users_list.xml
+++ b/app/src/main/res/menu/menu_users_list.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/action_create"
         android:orderInCategory="100"
-        android:title="borrar"
+        android:title="@string/txt_menu_create_title"
         android:icon="@android:drawable/ic_menu_add"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
+
 </menu>
