--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="item_title_padding">8dp</dimen>
+    <dimen name="content_item_user_padding">8dp</dimen>
     <dimen name="item_userlist_padding">1dp</dimen>
 
 </resources>
