--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical"
             android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:background="@color/colorPrimaryLight"
+            android:background="@color/icons"
             android:padding="@dimen/content_item_user_padding">
 
             <TextView
