--- a/app/src/main/res/menu/menu_user_detail.xml
+++ b/app/src/main/res/menu/menu_user_detail.xml
@@ -7,14 +7,14 @@
         android:id="@+id/action_delete"
         android:orderInCategory="100"
         android:title="@string/txt_menu_delete_title"
-        android:icon="@android:drawable/ic_menu_delete"
+        android:icon="@drawable/ic_delete_white_24dp"
         app:showAsAction="ifRoom"/>
 
     <item
         android:id="@+id/action_edit"
         android:orderInCategory="101"
         android:title="@string/txt_menu_edit_title"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_edit_white_24dp"
         app:showAsAction="ifRoom"/>
 
     <item
@@ -30,6 +30,6 @@
         android:orderInCategory="103"
         android:title="@string/txt_menu_save_title"
         android:visible="false"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@drawable/ic_save_white_24dp"
         app:showAsAction="ifRoom"/>
 </menu>
