--- a/app/src/main/res/menu/menu_users_list.xml
+++ b/app/src/main/res/menu/menu_users_list.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_create"
         android:orderInCategory="100"
         android:title="@string/txt_menu_create_title"
-        android:icon="@android:drawable/ic_menu_add"
+        android:icon="@drawable/ic_person_add_white_24dp"
         app:showAsAction="ifRoom"/>
 
 </menu>
